--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,11 @@ section {
   background-color: black;
 }
 
+.blue {
+  background: rgb(0, 210, 205);
+  background: linear-gradient(90deg, rgba(0, 210, 205, 1) 0%, rgba(235, 19, 216, 1) 50%, rgba(242, 214, 12, 1) 100%);
+}
+
 
 /* Colores */
 .color__01 {
@@ -40,6 +45,10 @@ section {
 
 .color__03 {
   color: #00d2cd;
+}
+
+.color__04 {
+  color: #ffffff;
 }
 
 /* textos */
@@ -119,9 +128,15 @@ h4 {
   color: #ffffff;
 }
 
+
+
+/*INDEX */
+
+
+
 /* grid */
 
-main {
+.grid-body {
   display: grid;
   grid-template-columns: 20% 30% 50%;
   /* ancho dado por la cantidad de ccols */
@@ -144,6 +159,7 @@ header {
   grid-area: header;
 }
 
+
 nav {
   height: 80px;
   display: flex;
@@ -164,9 +180,12 @@ nav ul li {
   font-weight: 700;
   display: inline-block;
   margin-left: 40px;
-
-
 }
+
+.bars {
+  display: none;
+}
+
 
 a {
   text-decoration: none;
@@ -269,11 +288,12 @@ a:hover {
   display: flex;
   flex-direction: column;
   justify-self: center;
+  align-items: center;
 }
 
 .services__items {
   display: flex;
-  gap: 10px;
+  /* gap: 10px; */
 }
 
 .services__cards {
@@ -281,12 +301,13 @@ a:hover {
   width: 30%;
   display: flex;
   flex-direction: column;
+
 }
 
 .services__card-img {
-
   border-radius: 20px;
 }
+
 
 .service__name {
   align-self: center;
@@ -314,14 +335,15 @@ footer {
 
 
 
+/* Mobile view Index */
 @media only screen and (min-width:0px) and (max-width:767px) {
 
   /* container */
-  .container {
+  /*  .container {
     width: 95%;
     margin: 0 auto;
 
-  }
+  } */
 
   h1 {
     font-size: 30px;
@@ -397,6 +419,7 @@ footer {
     justify-content: space-between;
     gap: 16px;
     margin: 20px 0px;
+    align-items: center;
   }
 
   .about div img {
@@ -417,7 +440,219 @@ footer {
   }
 
   .float {
-    top: 70%;
-    left: 60%;
+    top: 90%;
+    left: 80%;
+  }
+
+  .list {
+    display: none;
+  }
+
+  .social {
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  #menu {
+    display: none;
+  }
+}
+
+
+/* ipad view Index */
+@media only screen and (min-width:768px) and (max-width:1200px) {
+  .hero__img {
+    display: none;
+  }
+
+  .services__items {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+  }
+
+  .services__cards {
+    border-radius: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .about div img {
+    display: none;
+  }
+
+  .float {
+    top: 80%;
+    left: 85%;
+  }
+
+  #menu {
+    display: none;
+  }
+
+}
+
+
+
+/* SERVICIOS */
+
+.service__description {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  justify-items: stretch;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.service_description-items {
+  border-radius: 10px;
+  padding: 10px 20px 10px 20px;
+  list-style: none;
+}
+
+.service_description-items ul li {
+  list-style: none;
+}
+
+.services_titles {
+  margin-top: 20px;
+
+}
+
+/* Mobile view Servicios*/
+@media only screen and (min-width:0px) and (max-width:767px) {
+  .service__description {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+    justify-items: stretch;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+}
+
+/* ipad view Index */
+@media only screen and (min-width:768px) and (max-width:1200px) {
+  .service__description {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+    justify-items: stretch;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+}
+
+
+/* Nosotros */
+
+.leads {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+/* Mobile view Nosotros*/
+@media only screen and (min-width:0px) and (max-width:767px) {
+  .leads {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+}
+
+/* ipad view Nosotros */
+@media only screen and (min-width:768px) and (max-width:1200px) {
+  .leads {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+/* BLOG */
+
+.article_cards {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-top: 30px;
+
+}
+
+.article_item {
+  background-color: rgb(229, 229, 229);
+  border-radius: 20px;
+  padding: 10px 20px 10px 20px;
+  -webkit-box-shadow: 11px -5px 19px -11px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 11px -5px 19px -11px rgba(0, 0, 0, 0.75);
+  box-shadow: 11px -5px 19px -11px rgba(0, 0, 0, 0.75);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.article_item img {
+  border-radius: 10px;
+}
+
+/* Mobile view Blog*/
+@media only screen and (min-width:0px) and (max-width:767px) {
+  .article_cards {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 30px;
+
+  }
+
+}
+
+/* ipad view Blog */
+@media only screen and (min-width:768px) and (max-width:1200px) {
+  .article_cards {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 30px;
+
+  }
+}
+
+
+
+/* CONTACTO */
+
+.contacto {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.form {
+  background-color: rgb(231, 228, 228);
+  padding: 10px 20px 10px 20px;
+  border-radius: 20px;
+}
+
+/* Mobile view contacto*/
+@media only screen and (min-width:0px) and (max-width:767px) {
+  .contacto {
+    grid-template-columns: 1fr;
+  }
+}
+
+
+/* ipad view contacto */
+@media only screen and (min-width:768px) and (max-width:1200px) {
+  .contacto {
+    grid-template-columns: 1fr;
   }
 }
