--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,3 @@
-/* reset */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-/* body */
-body {
-  font-family: "Poppins", sans-serif;
-}
-
-
-/* container */
-.container {
-  width: 80%;
-  margin: 0 auto;
-  max-width: 1320px;
-}
-
-section {
-  margin: 0px 0px 0px 0px;
-}
-
-/* Background colores */
-
-.black {
-  background-color: black;
-}
-
-.blue {
-  background: rgb(0, 210, 205);
-  background: linear-gradient(90deg, rgba(0, 210, 205, 1) 0%, rgba(235, 19, 216, 1) 50%, rgba(242, 214, 12, 1) 100%);
-}
-
-
-/* Colores */
 .color__01 {
   color: #eb13d8;
 }
@@ -52,7 +15,6 @@ section {
 }
 
 /* textos */
-
 h1 {
   font-size: 60px;
   font-weight: 900;
@@ -73,586 +35,14 @@ h4 {
   font-weight: 700;
 }
 
-/* Botones */
-
-.btn-1 {
-  border-radius: 5px;
-  background-color: #00d2cd;
-  border: none;
-  padding: 8px;
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  margin: 16px 0px;
-}
-
-.btn-1:hover {
-  background-color: #eb13d8;
-  cursor: pointer;
-}
-
-.btn-2 {
-  border-radius: 5px;
-  background-color: #f2d60c;
-  border: none;
-  padding: 8px 12px;
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  margin: 16px 0px;
-}
-
-.btn-2:hover {
-  background-color: #eb13d8;
-  cursor: pointer;
-}
-
-/* Botones flotantes */
-
-.float {
-  display: flex;
-  position: fixed;
-  z-index: 99;
-  top: 90%;
-  left: 94%;
-  width: 60px;
-  height: 60px;
-  line-height: 55px;
-  background-color: #25D366;
-  color: #ffffff;
-  border-radius: 50px;
-  align-items: center;
-  justify-content: center;
-  font-size: 30px;
-}
-
-.float:hover {
-  color: #ffffff;
-}
-
-
-
-/*INDEX */
-
-
-
-/* grid */
-
-.grid-body {
-  display: grid;
-  grid-template-columns: 20% 30% 50%;
-  /* ancho dado por la cantidad de ccols */
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-areas:
-    "header header header"
-    "hero hero hero"
-    "cards_section cards_section cards_section"
-    "about about about"
-    "services services services"
-    "footer footer footer"
-  ;
-}
-
-/* Menú navegación */
-
-header {
-  position: sticky;
-  top: 0;
-  grid-area: header;
-}
-
-
-nav {
-  height: 80px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-}
-
-nav ul {}
-
-nav img {
-  align-items: flex-start;
-}
-
-nav ul li {
-  list-style: none;
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  display: inline-block;
-  margin-left: 40px;
-}
-
-.bars {
-  display: none;
-}
-
-
-a {
-  text-decoration: none;
-  color: rgb(255, 255, 255);
-}
-
-a:hover {
-  color: #eb13d8;
-  cursor: pointer;
-}
-
-
-
-
-/* Hero */
-
-.hero {
-  grid-area: hero;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.hero__title {}
-
-.hero__img {}
-
-/* items */
-
-.cards_section {
-  grid-area: cards_section;
-}
-
-.cards {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  gap: 16px;
-  margin: 20px 0px;
-}
-
-.cards__item {
-  border-radius: 10px;
-  padding: 10px;
-  background-color: #f2d60c;
-  box-shadow: 17px 19px 11px -13px rgba(0, 0, 0, 0.1);
-  height: 200px;
-  width: 95%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-}
-
-.cards__item:hover {
-  background-color: #00d2cd;
-  cursor: pointer;
-
-}
-
-.cards__icon {
-  margin: 16px 0px 16px 0px;
-  color: black;
-
-}
-
-.cards__title {
-  text-align: cente
-}
-
-.cards__text {
-  text-align: center;
-}
-
-.cards i {
-  margin-bottom: 30px;
-}
-
-
-/* about */
-.about {
-  grid-area: about;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* services */
-
-.services {
-  grid-area: services;
-  margin-top: 40px;
-  margin-bottom: 60px;
-}
-
-.services_title {
-  display: flex;
-  flex-direction: column;
-  justify-self: center;
-  align-items: center;
-}
-
-.services__items {
-  display: flex;
-  /* gap: 10px; */
-}
-
-.services__cards {
-  border-radius: 20px;
-  width: 30%;
-  display: flex;
-  flex-direction: column;
-
-}
-
-.services__card-img {
-  border-radius: 20px;
-}
-
-
-.service__name {
-  align-self: center;
-  color: #eb13d8;
-
-}
-
-/* Footer */
-
 footer {
-  grid-area: footer;
+  background-color: black;
+}
+footer ul {
+  list-style: none;
+}
+footer ul li a {
   color: white;
-  padding: 20px 0px 20px 0px;
-
 }
 
-
-.container__footer {
-  width: 80%;
-  margin: 0 auto;
-  max-width: 1320px;
-  display: flex;
-  padding: 80px 20px 80px 20px;
-}
-
-
-
-/* Mobile view Index */
-@media only screen and (min-width:0px) and (max-width:767px) {
-
-  /* container */
-  /*  .container {
-    width: 95%;
-    margin: 0 auto;
-
-  } */
-
-  h1 {
-    font-size: 30px;
-    font-weight: 900;
-  }
-
-  main {
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-columns: 1fr;
-    grid-template-areas:
-      "header"
-      "hero"
-      "cards_section"
-      "about"
-      "services"
-      "footer"
-    ;
-  }
-
-  /* Hero */
-
-  .hero {
-    grid-area: hero;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .hero__title {}
-
-  .hero__img {
-    display: none;
-  }
-
-  /* items */
-
-  .cards_section {
-    grid-area: cards_section;
-  }
-
-  header {
-    position: sticky;
-    top: 0;
-    grid-area: header;
-  }
-
-  nav {
-    height: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-  }
-
-  nav ul {
-    display: none;
-  }
-
-  nav i {
-    display: flex;
-  }
-
-  .cards_section {
-    grid-area: cards_section;
-  }
-
-  .cards {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    justify-content: space-between;
-    gap: 16px;
-    margin: 20px 0px;
-    align-items: center;
-  }
-
-  .about div img {
-    display: none;
-  }
-
-  .services__items {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  .services__cards {
-    border-radius: 20px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .float {
-    top: 90%;
-    left: 80%;
-  }
-
-  .list {
-    display: none;
-  }
-
-  .social {
-    display: flex;
-    flex-direction: column;
-
-  }
-
-  #menu {
-    display: none;
-  }
-}
-
-
-/* ipad view Index */
-@media only screen and (min-width:768px) and (max-width:1200px) {
-  .hero__img {
-    display: none;
-  }
-
-  .services__items {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-
-  }
-
-  .services__cards {
-    border-radius: 20px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .about div img {
-    display: none;
-  }
-
-  .float {
-    top: 80%;
-    left: 85%;
-  }
-
-  #menu {
-    display: none;
-  }
-
-}
-
-
-
-/* SERVICIOS */
-
-.service__description {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 10px;
-  justify-items: stretch;
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.service_description-items {
-  border-radius: 10px;
-  padding: 10px 20px 10px 20px;
-  list-style: none;
-}
-
-.service_description-items ul li {
-  list-style: none;
-}
-
-.services_titles {
-  margin-top: 20px;
-
-}
-
-/* Mobile view Servicios*/
-@media only screen and (min-width:0px) and (max-width:767px) {
-  .service__description {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 10px;
-    justify-items: stretch;
-    margin-top: 30px;
-    margin-bottom: 30px;
-  }
-}
-
-/* ipad view Index */
-@media only screen and (min-width:768px) and (max-width:1200px) {
-  .service__description {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 10px;
-    justify-items: stretch;
-    margin-top: 30px;
-    margin-bottom: 30px;
-  }
-}
-
-
-/* Nosotros */
-
-.leads {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-/* Mobile view Nosotros*/
-@media only screen and (min-width:0px) and (max-width:767px) {
-  .leads {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-}
-
-/* ipad view Nosotros */
-@media only screen and (min-width:768px) and (max-width:1200px) {
-  .leads {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-/* BLOG */
-
-.article_cards {
-  display: grid;
-  gap: 20px;
-  grid-template-columns: 1fr 1fr 1fr;
-  margin-top: 30px;
-
-}
-
-.article_item {
-  background-color: rgb(229, 229, 229);
-  border-radius: 20px;
-  padding: 10px 20px 10px 20px;
-  -webkit-box-shadow: 11px -5px 19px -11px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 11px -5px 19px -11px rgba(0, 0, 0, 0.75);
-  box-shadow: 11px -5px 19px -11px rgba(0, 0, 0, 0.75);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.article_item img {
-  border-radius: 10px;
-}
-
-/* Mobile view Blog*/
-@media only screen and (min-width:0px) and (max-width:767px) {
-  .article_cards {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-top: 30px;
-
-  }
-
-}
-
-/* ipad view Blog */
-@media only screen and (min-width:768px) and (max-width:1200px) {
-  .article_cards {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-top: 30px;
-
-  }
-}
-
-
-
-/* CONTACTO */
-
-.contacto {
-  display: grid;
-  gap: 20px;
-  grid-template-columns: 1fr 1fr;
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.form {
-  background-color: rgb(231, 228, 228);
-  padding: 10px 20px 10px 20px;
-  border-radius: 20px;
-}
-
-/* Mobile view contacto*/
-@media only screen and (min-width:0px) and (max-width:767px) {
-  .contacto {
-    grid-template-columns: 1fr;
-  }
-}
-
-
-/* ipad view contacto */
-@media only screen and (min-width:768px) and (max-width:1200px) {
-  .contacto {
-    grid-template-columns: 1fr;
-  }
-}
+/*# sourceMappingURL=styles.css.map */
