--- a/scss/_nesting.scss
+++ b/scss/_nesting.scss
@@ -1,3 +1,4 @@
+
 footer {
     background-color: black;
 
@@ -6,6 +7,12 @@ footer {
 
         li a {
             color: white;
+
+            &:hover {
+            color: #f2d60c;
         }
+        }
+
+        
     }
 }
