--- a/css/styles.css
+++ b/css/styles.css
@@ -29,8 +29,9 @@ section {
 }
 
 .blue {
-  background: rgb(0, 210, 205);
-  background: linear-gradient(90deg, rgba(0, 210, 205, 1) 0%, rgba(235, 19, 216, 1) 50%, rgba(242, 214, 12, 1) 100%);
+  background-color: beige;
+  -webkit-box-shadow: 5px 5px 15px 5px #00000055;
+  box-shadow: 5px 5px 15px 5px #00000030;
 }
 
 
@@ -157,6 +158,7 @@ header {
   position: sticky;
   top: 0;
   grid-area: header;
+  z-index: 2;
 }
 
 
@@ -198,7 +200,9 @@ a:hover {
 }
 
 
-
+#img-us {
+  width: auto;
+}
 
 /* Hero */
 
@@ -268,6 +272,8 @@ a:hover {
 }
 
 
+
+
 /* about */
 .about {
   grid-area: about;
@@ -294,13 +300,15 @@ a:hover {
 .services__items {
   display: flex;
   /* gap: 10px; */
+  overflow: scroll;
 }
 
 .services__cards {
   border-radius: 20px;
-  width: 30%;
+  width: auto;
   display: flex;
   flex-direction: column;
+  padding: 10px;
 
 }
 
@@ -335,8 +343,121 @@ footer {
 
 
 
+
+
+
+/* SERVICIOS */
+
+.service__description {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  justify-items: stretch;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.service_description-items {
+  border-radius: 10px;
+  padding: 10px 20px 10px 20px;
+  list-style: none;
+}
+
+.service_description-items ul li {
+  list-style: none;
+}
+
+.services_titles {
+  margin-top: 20px;
+
+}
+
+
+
+
+
+/* Nosotros */
+
+.leads {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+
+
+
+
+
+/* BLOG */
+
+.article_cards {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-top: 30px;
+
+}
+
+.article_item {
+  background-color: beige;
+  border-radius: 20px;
+  padding: 10px 20px 10px 20px;
+  -webkit-box-shadow: 11px -5px 19px -11px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 11px -5px 19px -11px rgba(0, 0, 0, 0.75);
+  box-shadow: 11px -5px 19px -11px rgba(0, 0, 0, 0.75);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.article_item img {
+  border-radius: 10px;
+}
+
+
+
+
+
+/* CONTACTO */
+
+.contacto {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.form {
+  background-color: rgb(231, 228, 228);
+  padding: 10px 20px 10px 20px;
+  border-radius: 20px;
+}
+
+
+
+
 /* Mobile view Index */
 @media only screen and (min-width:0px) and (max-width:767px) {
+
+  .contacto {
+    grid-template-columns: 1fr;
+  }
+
+  .service__description {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .article_cards {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 30px;
+
+  }
 
   /* container */
   /*  .container {
@@ -362,6 +483,10 @@ footer {
       "services"
       "footer"
     ;
+  }
+
+  #img-us {
+    width: 100%;
   }
 
   /* Hero */
@@ -461,7 +586,58 @@ footer {
 
 
 /* ipad view Index */
+
 @media only screen and (min-width:768px) and (max-width:1200px) {
+
+  .contacto {
+    grid-template-columns: 1fr;
+  }
+
+  .service__description {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .article_cards {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 30px;
+
+  }
+
+  .leads {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .service__description {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+    justify-items: stretch;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+
+  .leads {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+
+  .service__description {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+    justify-items: stretch;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+
+
   .hero__img {
     display: none;
   }
@@ -492,167 +668,4 @@ footer {
     display: none;
   }
 
-}
-
-
-
-/* SERVICIOS */
-
-.service__description {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 10px;
-  justify-items: stretch;
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.service_description-items {
-  border-radius: 10px;
-  padding: 10px 20px 10px 20px;
-  list-style: none;
-}
-
-.service_description-items ul li {
-  list-style: none;
-}
-
-.services_titles {
-  margin-top: 20px;
-
-}
-
-/* Mobile view Servicios*/
-@media only screen and (min-width:0px) and (max-width:767px) {
-  .service__description {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 10px;
-    justify-items: stretch;
-    margin-top: 30px;
-    margin-bottom: 30px;
-  }
-}
-
-/* ipad view Index */
-@media only screen and (min-width:768px) and (max-width:1200px) {
-  .service__description {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 10px;
-    justify-items: stretch;
-    margin-top: 30px;
-    margin-bottom: 30px;
-  }
-}
-
-
-/* Nosotros */
-
-.leads {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-/* Mobile view Nosotros*/
-@media only screen and (min-width:0px) and (max-width:767px) {
-  .leads {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-}
-
-/* ipad view Nosotros */
-@media only screen and (min-width:768px) and (max-width:1200px) {
-  .leads {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-/* BLOG */
-
-.article_cards {
-  display: grid;
-  gap: 20px;
-  grid-template-columns: 1fr 1fr 1fr;
-  margin-top: 30px;
-
-}
-
-.article_item {
-  background-color: rgb(229, 229, 229);
-  border-radius: 20px;
-  padding: 10px 20px 10px 20px;
-  -webkit-box-shadow: 11px -5px 19px -11px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 11px -5px 19px -11px rgba(0, 0, 0, 0.75);
-  box-shadow: 11px -5px 19px -11px rgba(0, 0, 0, 0.75);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.article_item img {
-  border-radius: 10px;
-}
-
-/* Mobile view Blog*/
-@media only screen and (min-width:0px) and (max-width:767px) {
-  .article_cards {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-top: 30px;
-
-  }
-
-}
-
-/* ipad view Blog */
-@media only screen and (min-width:768px) and (max-width:1200px) {
-  .article_cards {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-top: 30px;
-
-  }
-}
-
-
-
-/* CONTACTO */
-
-.contacto {
-  display: grid;
-  gap: 20px;
-  grid-template-columns: 1fr 1fr;
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.form {
-  background-color: rgb(231, 228, 228);
-  padding: 10px 20px 10px 20px;
-  border-radius: 20px;
-}
-
-/* Mobile view contacto*/
-@media only screen and (min-width:0px) and (max-width:767px) {
-  .contacto {
-    grid-template-columns: 1fr;
-  }
-}
-
-
-/* ipad view contacto */
-@media only screen and (min-width:768px) and (max-width:1200px) {
-  .contacto {
-    grid-template-columns: 1fr;
-  }
 }
