--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-
 /* reset */
 * {
   margin: 0;
@@ -157,7 +156,7 @@ h4 {
   grid-template-columns: 20% 30% 50%;
   /* ancho dado por la cantidad de ccols */
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-areas: "header header header""hero hero hero""cards_section cards_section cards_section""about about about""services services services""footer footer footer";
+  grid-template-areas: "header header header" "hero hero hero" "cards_section cards_section cards_section" "about about about" "services services services" "footer footer footer";
 }
 
 /* Menú navegación */
@@ -252,7 +251,7 @@ a:hover {
 }
 
 .cards__title {
-  text-align: cente;
+  text-align: center;
 }
 
 .cards__text {
@@ -369,24 +368,34 @@ footer {
   padding: 80px 20px 80px 20px;
 }
 
+footer {
+  background-color: black;
+}
+footer ul {
+  list-style: none;
+}
+footer ul li a {
+  color: white;
+}
+footer ul li a:hover {
+  color: #f2d60c;
+}
+
 /* Mobile view Index */
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .contacto {
     grid-template-columns: 1fr;
   }
-
   .service__description {
     display: grid;
     grid-template-columns: 1fr;
   }
-
   .article_cards {
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-top: 30px;
   }
-
   /* container */
   /*  .container {
     width: 95%;
@@ -397,18 +406,15 @@ footer {
     font-size: 30px;
     font-weight: 900;
   }
-
   main {
     display: grid;
     grid-template-columns: 100%;
     grid-template-columns: 1fr;
-    grid-template-areas: "header""hero""cards_section""about""services""footer";
+    grid-template-areas: "header" "hero" "cards_section" "about" "services" "footer";
   }
-
   #img-us {
     width: 100%;
   }
-
   /* Hero */
   .hero {
     grid-area: hero;
@@ -417,41 +423,33 @@ footer {
     justify-content: space-between;
     align-items: center;
   }
-
   .hero__img {
     display: none;
   }
-
   /* items */
   .cards_section {
     grid-area: cards_section;
   }
-
   header {
     position: sticky;
     top: 0;
     grid-area: header;
   }
-
   nav {
     height: 80px;
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
-
   nav ul {
     display: none;
   }
-
   nav i {
     display: flex;
   }
-
   .cards_section {
     grid-area: cards_section;
   }
-
   .cards {
     display: flex;
     flex-direction: column;
@@ -461,67 +459,55 @@ footer {
     margin: 20px 0px;
     align-items: center;
   }
-
   .about div img {
     display: none;
   }
-
   .services__items {
     display: flex;
     flex-direction: column;
     gap: 10px;
   }
-
   .services__cards {
     border-radius: 20px;
     width: 100%;
     display: flex;
     flex-direction: column;
   }
-
   .float {
     top: 90%;
     left: 80%;
   }
-
   .list {
     display: none;
   }
-
   .social {
     display: flex;
     flex-direction: column;
   }
-
   #menu {
     display: none;
   }
 }
-
 /* ipad view Index */
 @media only screen and (min-width: 768px) and (max-width: 1200px) {
   .contacto {
     grid-template-columns: 1fr;
   }
-
   .service__description {
     display: grid;
     grid-template-columns: 1fr;
   }
-
   .article_cards {
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-top: 30px;
   }
-
   .leads {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-
   .service__description {
     display: grid;
     grid-template-columns: 1fr;
@@ -530,13 +516,11 @@ footer {
     margin-top: 30px;
     margin-bottom: 30px;
   }
-
   .leads {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-
   .service__description {
     display: grid;
     grid-template-columns: 1fr;
@@ -545,32 +529,26 @@ footer {
     margin-top: 30px;
     margin-bottom: 30px;
   }
-
   .hero__img {
     display: none;
   }
-
   .services__items {
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
-
   .services__cards {
     border-radius: 20px;
     width: 100%;
     display: flex;
     flex-direction: column;
   }
-
   .about div img {
     display: none;
   }
-
   .float {
     top: 80%;
     left: 85%;
   }
-
   #menu {
     display: none;
   }
