--- a/SCSS/_responsive.scss
+++ b/SCSS/_responsive.scss
@@ -18,6 +18,16 @@
 
   }
 
+  #country {
+    width: 80%;
+  }
+
+  .form {
+  background-color: rgb(231, 228, 228);
+  padding: 10px 10px 10px 10px;
+  border-radius: 20px;
+}
+
   /* container */
   /*  .container {
     width: 95%;
@@ -45,6 +55,10 @@
   }
 
   #img-us {
+    width: 100%;
+  }
+
+  #img-us2 {
     width: 100%;
   }
 
